[package]
name = "network_watchdog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "network_watchdog"
path = "src/main.rs"
subsystem = "windows"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}
winping = "0.10.1"
rust-ini = "0.19"
